--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1 id="overskrift">Jon Thallaug</h1>
     </div>
     <div class="tob">
-        <h2 id="elefant-tekst">Dette er en elefant</h2>
-        <img id="elefant" src="https://a-mobler.no/~/pir/products/ptl912026/PTL912026-TL912026.jpg">
+        <h2 id="elefant-tekst">Dette er en sjiraff</h2>
+        <img id="elefant" src="https://media.snl.no/media/59328/standard_compressed_Giraff_portrett.jpg">
     </div>
 </body>
 </html>
