--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="div1">
-        <h1 id="overskrift">Jon Thallaug</h1>
+        <h1 id="overskrift">Jon Thallaug 123 123</h1>
     </div>
     <div class="tob">
         <h2 id="elefant-tekst">Dette er en sjiraff</h2>
