--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <h1 id="overskrift">Jon Thallaug</h1>
     </div>
     <div class="tob">
-        <h2 id="elefant-tekst">Dette er en sjiraff</h2>
-        <img id="elefant" src="https://media.snl.no/media/59328/standard_compressed_Giraff_portrett.jpg">
+        <img id="bildeavmeg" src="https://scontent.ftrd1-1.fna.fbcdn.net/v/t39.30808-6/311350253_1464302310744556_6350868580766849798_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=jpgo6F7lFw0AX9PnZFC&tn=Pd4HuJ6fUrHnV1VL&_nc_ht=scontent.ftrd1-1.fna&oh=00_AfB5SK6OZpcrw0ImOOoQNFBhIA4UTQIeo8oEYDuqNCJ1-w&oe=6360E8B1">
     </div>
 </body>
 </html>
