--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jon Thallaug</title>
+    <title>Singapore</title>
 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="div1">
-        <h1 id="overskrift">Jon Thallaug</h1>
+    <div class="div" id="hoved-div">
+        <h1 id="overskrift">Singapore</h1>
+        <img id="singapore-flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Flag_of_Singapore.svg/1024px-Flag_of_Singapore.svg.png">
     </div>
-    <div class="tob">
-        <img id="bildeavmeg" src="Jon-thallaug.jpg">
+    <!-- <div class="div" id ="fun-facts-div">
+        <a href="#" id="knapp">Fun Facts</a>
+    </div> -->
+    <div class="div" id="fun-facts">
+        <span class="span" id="fun-facts-text">
+            <h3>Fun Facts</h3>
+            <ul>
+                <li>Det tar bare 1 time å kjøre fra ene siden av Singapore til den andre</li>
+                <li>Singapore har 2 flyplasser med 15 min ca. Mellomrom med bil</li>
+                <li>Singapore var en koloni av Storbritannia</li>
+                <li>Singapore er en liten øy og er kun sammenhengene med Malaysa gjennom kun 2 broer</li>
+            </ul>
+        </span>
+        <span class="span" id="fun-facts-bilde">
+            <img class="bilde" id="kart" src="Kart.png">
+        </span>
+    </div>
+    <div class="div" id="kort-info">
+        <span class="span" id="kort-info-text">
+            <h3 class="text-kort-info">Kort info</h3>
+            <p class="text-kort-info">Singapore er et lite land på bare 728,6 km2. Singapore har også bare 5,4 millioner innbyggere. Landet er en kombinert øy og bystat, som ligger sør på Malayahalvøya. Singapore har lite resurser som gjør at det ikke er utsatt for krig over landet deres. Singapore er også kjent mer som en storby instedet for et land på grunn av den lille størrelsen det har. </p>
+        </span>
+        <span class="span" id="kort-info-bilde">
+
+        </span>
     </div>
 </body>
 </html>
